--- a/qtify/src/components/Navbar/Navbar.module.css
+++ b/qtify/src/components/Navbar/Navbar.module.css
@@ -1,10 +1,15 @@
 .navbar {
     background-color: var(--color-primary);
-    height: 74px;
-    width: 100vw;
-    padding: 0px 32px;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    width: 100vw;
+    height: 74px;
+    padding: 0px 32px;
   }
-  
+
+  .logoDiv{
+    display: flex;
+    margin: 14px;
+    cursor: pointer;
+  }
