--- a/qtify/src/index.css
+++ b/qtify/src/index.css
@@ -1,23 +1,35 @@
 :root {
-  --color-primary: #34c94b;
-  --color-white: #ffffff;
-  --color-black: #121212;
-}
-
-*,
-*::before,
-*::after {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-html,
-body {
-  height: 100%;
-  width: 100%;
-  background-color: var(--color-black);
-  color: var(--color-white);
-  font-family: 'Poppins', sans-serif;
-}
-
+    --color-primary: #34c94b;
+    --color-white: #ffffff;
+    --color-black: #121212;
+  }
+  
+  *,
+  *::before,
+  *::after {
+    box-sizing: border-box;
+  }
+  * {
+    margin: 0;
+  }
+  html,body {
+    height: 100%;
+  }
+  body {
+    background-color: var(--color-black);
+    color: var(--color-white);
+    font-family: 'Poppins', sans-serif;
+    line-height: 1.5;
+    overflow-x: hidden;
+  }
+  
+  img,svg{
+    display: block;
+    /* align-items: center; */
+    max-width: 100%;
+    /* margin: 5px; */
+  }
+  
+  .swiper-slide{
+    width: auto !important;
+  }
